--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^10.0.3",
+    "@react-three/fiber": "^9.0.4",
+    "@react-three/rapier": "^1.5.0",
+    "@types/three": "^0.174.0",
+    "leva": "^0.10.0",
+    "meshline": "^3.3.1",
+    "next": "15.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.2.0"
+    "three": "^0.174.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
