--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/rapier": "^1.5.0",
     "@types/three": "^0.174.0",
     "leva": "^0.10.0",
+    "lucide-react": "^0.477.0",
     "meshline": "^3.3.1",
     "next": "15.2.0",
     "react": "^19.0.0",
